# azure-templates

./: .env_sample  README.md  pyproject.toml
src/azure_templates/: create_resource_group.py  create_storage_account.py  create_virtual_machine.py  create_virtual_network.py  delete_resource_group.py  list_resources_in_group.py  list_virtual_machines.py  openai_gpt_query.py  openai_model_query.py  rag_with_openai.py  upload_blob_to_storage.py
src/azure_templates/ml/: ml_workspace_connect.py
src/azure_templates/queries/: .sample_env  azure_openai_auth.py  azure_openai_gpt_query.py  openai_gpt_query.py  openai_model_query.py  rag_with_openai.py
src/azure_templates/resources/: create_storage_account.py  create_virtual_network.py  delete_resource_group.py  list_virtual_machines.py  upload_blob_to_storage.py
